<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.muscle.MuscleFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".ui.muscle.MuscleFragment">


    <TextView
        android:id="@+id/text_muscle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/muscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Muscle Page"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/textChest"
            android:layout_width="77dp"
            android:layout_height="41dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="512dp"
            android:text="@string/chest1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/chest_res" />

        <TextView
        android:id="@+id/textBack"
        android:layout_width="62dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="352dp"
        android:text="@string/back1"
        android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/back_res" />


        <TextView
            android:id="@+id/textBicep"
            android:layout_width="72dp"
            android:layout_height="39dp"
            android:layout_marginTop="416dp"
            android:layout_marginEnd="28dp"
            android:text="@string/bicep1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/bicep_res" />

        <TextView
            android:id="@+id/textQuads"
            android:layout_width="95dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="84dp"
            android:onClick="quads"
            android:text="@string/quads1"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/imageBicep"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="404dp"
            android:contentDescription="@string/bicep_res"
            android:onClick="Bicep"
            android:textStyle="bold"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bicep" />

        <ImageButton
            android:id="@+id/imageChest"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginBottom="480dp"
            android:contentDescription="@string/chest_res"
            android:onClick="Chest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/chest" />

        <ImageButton
            android:id="@+id/imageBack"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="108dp"
            android:contentDescription="@string/back_res"
            android:onClick="Back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <ImageButton
            android:id="@+id/imageQuad"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="568dp"
            android:layout_marginEnd="112dp"
            android:contentDescription="@string/quads_res"
            android:onClick="quads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/quads" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
