<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">>

    <!--
        https://www.youtube.com/watch?v=DpFNfQzhKQM&ab_channel=CodingDemos
        Video is for the Scrollable page
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".UserProfile">


        <TextView
            android:id="@+id/GoalsTitle"
            android:layout_width="126dp"
            android:layout_height="68dp"
            android:layout_marginBottom="204dp"
            android:text="@string/goals"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/WeightTitle"
            android:layout_width="126dp"
            android:layout_height="68dp"
            android:layout_marginBottom="264dp"
            android:text="@string/weight"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#DC0202"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/AgeTitle"
            android:layout_width="126dp"
            android:layout_height="68dp"
            android:layout_marginBottom="324dp"
            android:text="@string/age"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#DC0202"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
        android:id="@+id/ProfileT"
        android:layout_width="229dp"
        android:layout_height="68dp"
        android:layout_marginBottom="528dp"
        android:text="Profile Page"
        android:textColor="@color/red"
        android:textSize="30dp"
            android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


        <TextView
            android:id="@+id/NameTitle"
            android:layout_width="126dp"
            android:layout_height="68dp"
            android:layout_marginBottom="380dp"
            android:text="Name"
            android:textColor="#DC0202"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/firstname"
            android:layout_width="180dp"
            android:layout_height="68dp"
            android:layout_marginBottom="362dp"
            android:textColor="@color/red"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/weightText"
            android:layout_width="180dp"
            android:layout_height="68dp"
            android:layout_marginBottom="264dp"
            android:textColor="@color/red"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.911"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/goalsText"
            android:layout_width="180dp"
            android:layout_height="68dp"
            android:layout_marginBottom="188dp"
            android:textColor="@color/red"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="126dp"
            android:layout_height="68dp"
            android:layout_marginBottom="144dp"
            android:text="Email"
            android:textColor="#DC0202"
            android:textStyle="bold"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <TextView
            android:id="@+id/ageText"
            android:layout_width="126dp"
            android:layout_height="68dp"
            android:layout_marginBottom="332dp"
            android:textColor="@color/red"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.683"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="136dp"
            android:textColor="@color/red"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="253dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:text="Log Out"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/editProfileB"
            android:layout_width="253dp"
            android:layout_height="64dp"
            android:layout_marginBottom="72dp"
            android:text="edit Profile Details"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/changeProfile"
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:layout_marginBottom="460dp"
            android:text="change Picture"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />




        <ImageView
            android:id="@+id/ProfilePic"
            android:layout_width="96dp"
            android:layout_height="90dp"
            android:layout_marginBottom="456dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/profilepic" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
